# datasets

./: .gitignore  CMakeLists.txt  README.md
example/: info.sh
include/: conversions.h  dmatrix.h
include/convert/: ascii.h  dat.h  format.h  mat.h  xml.h
include/io/: ascii.h  dat.h  files.h  mat.h  xml.h
scripts/: evaluation.sh  evaluation_data.sh  evaluation_histogram.sh
src/: CMakeLists.txt  aligner.cpp  converter.cpp  visualizer.cpp
src/convert/: ascii.cpp  format.cpp  formats.cpp  mat.cpp  text.cpp  xml.cpp
src/convert-old/: ascii.cpp  format.cpp
src/converter-old/: main.cpp  mat.cpp  xml.cpp
src/dmatrix/: arrays.cu  dmatirx.cu  main.cpp  options.cpp  utils.cu
src/dmatrix/test/: dmatrix.m  test-d.mat  test-d.txt  test-f.mat  test-l.mat
src/libio/: ascii.cpp  file.cpp  mat.cpp  xml.cpp
src/matlab/: faces_animate.m  faces_data.m  faces_input.m  faces_kmeans.m  faces_main.m  faces_mean.m  faces_plot.m  faces_results.m  faces_tsne.m
src/octave/: dmatrix.m
